[package]
name = "results-screen"
version = "0.1.0"
authors = ["jugeeya <jugeeya@live.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
rand = { git = "https://github.com/skyline-rs/rand" }

[patch.crates-io]
nnsdk = { git = "https://github.com/ultimate-research/nnsdk-rs" }



[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
